Minor CSS improvements.

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,15 +17,18 @@
   <script>window._trackJs = {token: '<%= htmlWebpackPlugin.options.trackJSToken %>'};</script>
   <script src="https://d2zah9y47r7bi2.cloudfront.net/releases/current/tracker.js"></script>
   <% } %>
-
+    <meta name="viewport" content="initial-scale=1, width=device-width" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta charset="utf-8"/>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link
+            rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
   <link href="styles/main.css" rel="stylesheet">
 
-  <title>Clowder Frontend</title>
+  <title>Clowder v2</title>
 </head>
 <body>
 <div id="app"></div>
